--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -82,7 +82,7 @@ jobs:
         shell: pwsh
         run: |
           $env:PATH += ";$env:USERPROFILE\.dotnet\tools"
-          wix build installer\Orca.wxs -d Version=$env:VERSION -o OrcaSetup.msi
+          wix build installer\Orca.wxs -ext WixToolset.Util.wixext -d Version=$env:VERSION -o OrcaSetup-$env:VERSION.msi
 
       - name: Upload to GitHub Release
         uses: softprops/action-gh-release@v2
@@ -95,4 +95,4 @@ jobs:
         uses: softprops/action-gh-release@v2
         with:
           files: |
-            OrcaSetup.msi
+            OrcaSetup-*.msi
