--- a/.github/workflows/check-installer.yml
+++ b/.github/workflows/check-installer.yml
@@ -45,8 +45,7 @@ jobs:
         shell: pwsh
         run: |
           $env:PATH += ";$env:USERPROFILE\.dotnet\tools"
-          wix extension add WixToolset.Util.wixext/4.0.6
-          wix build installer\Orca.wxs -ext WixToolset.Util.wixext -d Version=$env:VERSION -o OrcaSetup.msi
+          wix build installer\Orca.wxs -d Version=$env:VERSION -o OrcaSetup.msi
 
       - name: Upload MSI Artifact
         uses: actions/upload-artifact@v4
