--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -100,8 +100,7 @@ jobs:
         shell: pwsh
         run: |
           $env:PATH += ";$env:USERPROFILE\.dotnet\tools"
-          wix extension add WixToolset.Util.wixext/4.0.6
-          wix build installer\Orca.wxs -ext WixToolset.Util.wixext -d Version=$env:VERSION -o OrcaSetup-$env:VERSION.msi
+          wix build installer\Orca.wxs -d Version=$env:VERSION -o OrcaSetup-$env:VERSION.msi
 
       - name: Upload to GitHub Release
         uses: softprops/action-gh-release@v2
