--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,6 +4,12 @@ on:
   push:
     tags:
       - "v*.*.*"
+  workflow_dispatch:
+    inputs:
+      version:
+        description: 'Version to build (without v prefix, e.g. 1.0.0-dev)'
+        required: false
+        default: '0.0.0-dev'
 
 permissions:
   contents: write
@@ -27,6 +33,7 @@ jobs:
         run: cargo test --locked
 
   create-release:
+    if: startsWith(github.ref, 'refs/tags/')
     name: Create Release
     needs: test
     runs-on: ubuntu-latest
@@ -43,7 +50,8 @@ jobs:
 
   build-and-upload:
     name: Build & Upload (${{ matrix.target }})
-    needs: create-release
+    needs: test
+    if: always() && (needs.create-release.result == 'success' || needs.create-release.result == 'skipped')
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
@@ -68,9 +76,13 @@ jobs:
       - name: Compute version
         shell: bash
         run: |
-          set -euo pipefail
-          VERSION="${GITHUB_REF_NAME#v}"
-          echo "VERSION=$VERSION" >> "$GITHUB_ENV"
+           set -euo pipefail
+           if [[ "${{ github.ref }}" == refs/tags/* ]]; then
+             VERSION="${GITHUB_REF_NAME#v}"
+           else
+             VERSION="${{ inputs.version || '0.0.0-dev' }}"
+           fi
+           echo "VERSION=$VERSION" >> "$GITHUB_ENV"
 
       - uses: dtolnay/rust-toolchain@stable
         with:
@@ -118,6 +130,7 @@ jobs:
           wix build installer\Orca.wxs -d Version=$env:VERSION -o OrcaSetup-$env:VERSION.msi
 
       - name: Upload to Public GitHub Release
+        if: startsWith(github.ref, 'refs/tags/')
         uses: softprops/action-gh-release@v2
         with:
           files: |
@@ -127,7 +140,7 @@ jobs:
           make_latest: false
 
       - name: Upload MSI to Public GitHub Release
-        if: matrix.os == 'windows-latest'
+        if: matrix.os == 'windows-latest' && startsWith(github.ref, 'refs/tags/')
         uses: softprops/action-gh-release@v2
         with:
           files: |
@@ -135,6 +148,15 @@ jobs:
           repository: vanthaita/orca-releases
           token: ${{ secrets.PUBLIC_RELEASE_TOKEN }}
           make_latest: false
+
+      - name: Upload Artifacts
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: orca-${{ matrix.target }}
+          path: |
+            orca-${{ matrix.target }}.${{ matrix.archive }}
+            OrcaSetup-*.msi
 
   update-install-script:
     name: Update Install Script
