--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -1,10 +1,11 @@
 [package]
 name = "orca"
-version = "0.1.8"
+version = "0.1.11"
 edition = "2024"
 description = "AI-powered Git commit manager using Gemini"
 
 [dependencies]
+async-trait = "0.1"
 anyhow = "1"
 clap = { version = "4", features = ["derive"] }
 console = "0.15"
