chore(ci): Enable WixToolset.UI extension for installer build

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -127,7 +127,7 @@ jobs:
         shell: pwsh
         run: |
           $env:PATH += ";$env:USERPROFILE\.dotnet\tools"
-          wix build installer\Orca.wxs -d Version=$env:VERSION -o OrcaSetup-$env:VERSION.msi
+          wix build installer\Orca.wxs -ext WixToolset.UI.wixext -d Version=$env:VERSION -o OrcaSetup-$env:VERSION.msi
 
       - name: Upload to Public GitHub Release
         if: startsWith(github.ref, 'refs/tags/')
