--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -121,7 +121,7 @@ jobs:
           dotnet tool install --global wix --version 4.*
           $env:PATH += ";$env:USERPROFILE\.dotnet\tools"
           wix --version
-          wix extension add WixToolset.UI.wixext
+          wix extension add WixToolset.UI.wixext --version 4.0.4
 
       - name: Build MSI (Windows)
         if: matrix.os == 'windows-latest'
