--- a/.github/workflows/check-installer.yml
+++ b/.github/workflows/check-installer.yml
@@ -45,7 +45,7 @@ jobs:
         run: |
           dotnet tool install --global wix --version 4.*
           $env:PATH += ";$env:USERPROFILE\.dotnet\tools"
-          wix --version
+          wix -?
 
       - name: Build MSI
         shell: pwsh
