--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -121,6 +121,8 @@ jobs:
           dotnet tool install --global wix --version 4.*
           $env:PATH += ";$env:USERPROFILE\.dotnet\tools"
 
+          wix -?
+
           wix extension add WixToolset.UI.wixext --version 4.0.4
 
       - name: Build MSI (Windows)
