refactor(ci): Update Wix extension installation command syntax

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -123,7 +123,7 @@ jobs:
 
           wix -?
 
-          wix extension add WixToolset.UI.wixext --version 4.0.4
+          wix extension add -g WixToolset.UI.wixext/4.0.4
 
       - name: Build MSI (Windows)
         if: matrix.os == 'windows-latest'
