--- a/.github/workflows/check-installer.yml
+++ b/.github/workflows/check-installer.yml
@@ -32,6 +32,8 @@ jobs:
 
       - name: Build
         working-directory: cli
+        env:
+          ORCA_DEFAULT_API_BASE_URL: ${{ vars.ORCA_DEFAULT_API_BASE_URL }}
         run: cargo build --release --locked --target x86_64-pc-windows-msvc
 
       - name: Prepare Dist
