--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,8 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.62.7",
+    "axios": "^1.6.8",
     "next": "16.1.1",
     "react": "19.2.3",
     "react-dom": "19.2.3"
