--- a/provision/docker-compose.yml
+++ b/provision/docker-compose.yml
@@ -44,7 +44,7 @@ services:
     ports:
       - "80:80"
     volumes:
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
     depends_on:
       - client
       - server
