feat(provision): Enable HTTPS with SSL for Nginx

--- a/provision/nginx.conf
+++ b/provision/nginx.conf
@@ -1,6 +1,23 @@
 server {
     listen 80;
     server_name orcacli.codes;
+    return 301 https://$host$request_uri;
+}
+
+server {
+    listen 80;
+    server_name api.orcacli.codes;
+    return 301 https://$host$request_uri;
+}
+
+server {
+    listen 443 ssl;
+    server_name orcacli.codes;
+
+    ssl_certificate /etc/nginx/ssl/certificate.crt;
+    ssl_certificate_key /etc/nginx/ssl/private.key;
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers HIGH:!aNULL:!MD5;
 
     location / {
         proxy_pass http://client:3000;
@@ -13,8 +30,13 @@ server {
 }
 
 server {
-    listen 80;
+    listen 443 ssl;
     server_name api.orcacli.codes;
+
+    ssl_certificate /etc/nginx/ssl/certificate.crt;
+    ssl_certificate_key /etc/nginx/ssl/private.key;
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers HIGH:!aNULL:!MD5;
 
     location / {
         proxy_pass http://server:8000;
