--- a/provision/docker-compose.yml
+++ b/provision/docker-compose.yml
@@ -43,8 +43,10 @@ services:
     restart: always
     ports:
       - "80:80"
+      - "443:443"
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./ssl:/etc/nginx/ssl:ro
     depends_on:
       - client
       - server
