--- a/client/package.json
+++ b/client/package.json
@@ -10,10 +10,14 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.62.7",
-    "axios": "^1.6.8",
+    "axios": "^1.13.2",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.562.0",
     "next": "16.1.1",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "tailwind-merge": "^3.4.0",
+    "zod": "^4.3.5"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
