--- a/server/package.json
+++ b/server/package.json
@@ -37,6 +37,7 @@
     "passport-jwt": "^4.0.1",
     "pg": "^8.13.1",
     "pino-http": "^11.0.0",
+    "pino-pretty": "^13.1.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.28"
