--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -17,3 +17,4 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
 toml = "0.8"
+hostname = "0.4"
