--- a/server/package.json
+++ b/server/package.json
@@ -40,6 +40,7 @@
     "pino-pretty": "^13.1.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
+    "sepay-pg-node": "^1.0.0",
     "typeorm": "^0.3.28"
   },
   "devDependencies": {
