--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -211,7 +211,7 @@ jobs:
   publish-npm:
     name: Publish to npm
     needs: build-and-upload
-    if: startsWith(github.ref, 'refs/tags/')
+    if: startsWith(github.ref, 'refs/tags/') || github.event_name == 'workflow_dispatch'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -225,8 +225,13 @@ jobs:
       - name: Compute version
         shell: bash
         run: |
-          VERSION="${GITHUB_REF_NAME#v}"
-          echo "VERSION=$VERSION" >> "$GITHUB_ENV"
+           set -euo pipefail
+           if [[ "${{ github.ref }}" == refs/tags/* ]]; then
+             VERSION="${GITHUB_REF_NAME#v}"
+           else
+             VERSION="${{ inputs.version || '0.0.0-dev' }}"
+           fi
+           echo "VERSION=$VERSION" >> "$GITHUB_ENV"
 
       - name: Update package.json version
         working-directory: cli
