--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -248,7 +248,7 @@ jobs:
   update-homebrew:
     name: Update Homebrew Formula
     needs: build-and-upload
-    if: startsWith(github.ref, 'refs/tags/')
+    if: false
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
