chore(ci): Allow same version for npm version command in release workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -236,7 +236,7 @@ jobs:
       - name: Update package.json version
         working-directory: cli
         run: |
-          npm version $VERSION --no-git-tag-version
+          npm version $VERSION --no-git-tag-version --allow-same-version
 
       - name: Publish to npm
         working-directory: cli
