--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -216,7 +216,10 @@ jobs:
   publish-npm:
     name: Publish to npm
     needs: build-and-upload
-    if: startsWith(github.ref, 'refs/tags/') || (github.event_name == 'workflow_dispatch' && inputs.publish_npm == true)
+    name: Publish to npm
+    needs: build-and-upload
+    if: startsWith(github.ref, 'refs/tags/') || github.event_name == 'workflow_dispatch'
+    runs-on: ubuntu-latest
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -309,6 +312,7 @@ jobs:
         working-directory: cli
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+        if: startsWith(github.ref, 'refs/tags/') || (github.event_name == 'workflow_dispatch' && inputs.publish_npm == true)
         run: |
           npm publish --access public
 
