feat(build): Add native aarch64 support and enhance npm package

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -66,8 +66,16 @@ jobs:
             target: x86_64-unknown-linux-gnu
             bin: orca
             archive: tar.gz
+          - os: ubuntu-latest
+            target: aarch64-unknown-linux-gnu
+            bin: orca
+            archive: tar.gz
           - os: macos-latest
             target: x86_64-apple-darwin
+            bin: orca
+            archive: tar.gz
+          - os: macos-latest
+            target: aarch64-apple-darwin
             bin: orca
             archive: tar.gz
           - os: windows-latest
@@ -98,10 +106,18 @@ jobs:
           workspaces: |
             cli
 
+      - name: Install Linux aarch64 linker
+        if: matrix.os == 'ubuntu-latest' && matrix.target == 'aarch64-unknown-linux-gnu'
+        shell: bash
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y gcc-aarch64-linux-gnu
+
       - name: Build
         working-directory: cli
         env:
           ORCA_DEFAULT_API_BASE_URL: ${{ vars.ORCA_DEFAULT_API_BASE_URL }}
+          CARGO_TARGET_AARCH64_UNKNOWN_LINUX_GNU_LINKER: ${{ matrix.target == 'aarch64-unknown-linux-gnu' && 'aarch64-linux-gnu-gcc' || '' }}
         run: cargo build --release --locked --target ${{ matrix.target }}
 
       - name: Package (tar.gz)
@@ -249,6 +265,10 @@ jobs:
         run: |
           # Copy install script
           cp ../scripts/install.js .
+
+          # Include README / LICENSE in npm package if present at repo root
+          cp ../README.md ./README.md 2>/dev/null || true
+          cp ../LICENSE ./LICENSE 2>/dev/null || true
           
           # Fix BIN_DIR in install.js is now handled dynamically in the script itself.
           # We no longer need to use sed to patch the path.
