--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -232,7 +232,7 @@ jobs:
   publish-npm:
     name: Publish to npm
     needs: build-and-upload
-    if: startsWith(github.ref, 'refs/tags/') || github.event_name == 'workflow_dispatch'
+    if: always()
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
