refactor(ci): Update WiX extension and repository references in workflows

--- a/.github/workflows/check-installer.yml
+++ b/.github/workflows/check-installer.yml
@@ -49,7 +49,7 @@ jobs:
           $env:PATH += ";$env:USERPROFILE\.dotnet\tools"
           wix -?
 
-          wix extension add -g WixToolset.UI.wixext/4.0.4
+          wix extension add -g WixToolset.UI.wixext
 
       - name: Build MSI
         shell: pwsh
