refactor(ci): Upgrade WiX toolset to v5

--- a/.github/workflows/check-installer.yml
+++ b/.github/workflows/check-installer.yml
@@ -45,11 +45,11 @@ jobs:
       - name: Install WiX
         shell: pwsh
         run: |
-          dotnet tool install --global wix --version 4.*
+          dotnet tool install --global wix --version 5.*
           $env:PATH += ";$env:USERPROFILE\.dotnet\tools"
           wix -?
 
-          wix extension add -g WixToolset.UI.wixext
+          wix extension add -g WixToolset.UI.wixext/5.0.0
 
       - name: Build MSI
         shell: pwsh
