--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -141,12 +141,11 @@ jobs:
         if: matrix.os == 'windows-latest'
         shell: pwsh
         run: |
-          dotnet tool install --global wix --version 4.*
+          dotnet tool install --global wix --version 5.*
           $env:PATH += ";$env:USERPROFILE\.dotnet\tools"
-
           wix -?
 
-          wix extension add -g WixToolset.UI.wixext
+          wix extension add -g WixToolset.UI.wixext/5.0.0
 
       - name: Build MSI (Windows)
         if: matrix.os == 'windows-latest'
