Refactor/orca cli migration (#12)
* refactor: Migrate repository and release references to Orca-CLI

* refactor(installer): Update WiX UI definitions

* refactor(installer): Streamline WiX UI references

* refactor(installer): Migrate to ui:WixUI for install directory

* refactor(build): Target x64 architecture for MSI and update release repository references

* refactor(ci): Update WiX extension and repository references in workflows

* refactor(winget): Harmonize repository URLs and update package metadata

* refactor(scripts): Update repository URL to Orca-CLI

* refactor(ci): Upgrade WiX toolset to v5

* refactor(installer): Standardize installation directory and UI configuration

* refactor(installer): Consolidate WiX UI install directory definition

--- a/.github/workflows/check-installer.yml
+++ b/.github/workflows/check-installer.yml
@@ -45,17 +45,17 @@ jobs:
       - name: Install WiX
         shell: pwsh
         run: |
-          dotnet tool install --global wix --version 4.*
+          dotnet tool install --global wix --version 5.*
           $env:PATH += ";$env:USERPROFILE\.dotnet\tools"
           wix -?
 
-          wix extension add -g WixToolset.UI.wixext/4.0.4
+          wix extension add -g WixToolset.UI.wixext/5.0.0
 
       - name: Build MSI
         shell: pwsh
         run: |
           $env:PATH += ";$env:USERPROFILE\.dotnet\tools"
-          wix build installer\Orca.wxs -ext WixToolset.UI.wixext -d Version=$env:VERSION -o OrcaSetup.msi
+          wix build installer\Orca.wxs -ext WixToolset.UI.wixext -arch x64 -d Version=$env:VERSION -o OrcaSetup.msi
 
       - name: Upload MSI Artifact
         uses: actions/upload-artifact@v4
