--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -47,7 +47,7 @@ jobs:
       - name: Create Release
         uses: softprops/action-gh-release@v2
         with:
-          repository: vanthaita/orca-releases
+          repository: vanthaita/Orca-CLI
           token: ${{ secrets.PUBLIC_RELEASE_TOKEN }}
           draft: false
           prerelease: false
@@ -141,19 +141,18 @@ jobs:
         if: matrix.os == 'windows-latest'
         shell: pwsh
         run: |
-          dotnet tool install --global wix --version 4.*
+          dotnet tool install --global wix --version 5.*
           $env:PATH += ";$env:USERPROFILE\.dotnet\tools"
-
           wix -?
 
-          wix extension add -g WixToolset.UI.wixext/4.0.4
+          wix extension add -g WixToolset.UI.wixext/5.0.0
 
       - name: Build MSI (Windows)
         if: matrix.os == 'windows-latest'
         shell: pwsh
         run: |
           $env:PATH += ";$env:USERPROFILE\.dotnet\tools"
-          wix build installer\Orca.wxs -ext WixToolset.UI.wixext -d Version=$env:VERSION -o OrcaSetup-$env:VERSION.msi
+          wix build installer\Orca.wxs -ext WixToolset.UI.wixext -arch x64 -d Version=$env:VERSION -o OrcaSetup-$env:VERSION.msi
 
       - name: Upload to Public GitHub Release
         if: startsWith(github.ref, 'refs/tags/')
@@ -161,7 +160,7 @@ jobs:
         with:
           files: |
             orca-${{ matrix.target }}.${{ matrix.archive }}
-          repository: vanthaita/orca-releases
+          repository: vanthaita/Orca-CLI
           token: ${{ secrets.PUBLIC_RELEASE_TOKEN }}
           make_latest: false
 
@@ -171,7 +170,7 @@ jobs:
         with:
           files: |
             OrcaSetup-*.msi
-          repository: vanthaita/orca-releases
+          repository: vanthaita/Orca-CLI
           token: ${{ secrets.PUBLIC_RELEASE_TOKEN }}
           make_latest: false
 
@@ -352,7 +351,7 @@ jobs:
           GH_TOKEN: ${{ secrets.PUBLIC_RELEASE_TOKEN }}
         run: |
           gh release download $GITHUB_REF_NAME \
-            --repo vanthaita/orca-releases \
+            --repo vanthaita/Orca-CLI \
             --pattern "orca-x86_64-apple-darwin.tar.gz" \
             --pattern "orca-x86_64-unknown-linux-gnu.tar.gz"
 
@@ -442,7 +441,7 @@ jobs:
           GH_TOKEN: ${{ secrets.PUBLIC_RELEASE_TOKEN }}
         run: |
           gh release download ${{ github.ref_name }} `
-            --repo vanthaita/orca-releases `
+            --repo vanthaita/Orca-CLI `
             --pattern "OrcaSetup-*.msi"
 
       - name: Compute SHA256
@@ -464,15 +463,15 @@ jobs:
           # Update installer manifest
           (Get-Content winget/vanthaita.Orca.installer.yaml) `
             -replace 'PackageVersion: .*', "PackageVersion: $env:VERSION" `
-            -replace 'InstallerUrl: .*', "InstallerUrl: https://github.com/vanthaita/orca-releases/releases/download/${{ github.ref_name }}/$env:MSI_FILENAME" `
+            -replace 'InstallerUrl: .*', "InstallerUrl: https://github.com/vanthaita/Orca-CLI/releases/download/${{ github.ref_name }}/$env:MSI_FILENAME" `
             -replace 'InstallerSha256: .*', "InstallerSha256: $env:MSI_SHA256" |
             Set-Content winget/vanthaita.Orca.installer.yaml
 
           # Update locale manifest
           (Get-Content winget/vanthaita.Orca.locale.en-US.yaml) `
             -replace 'PackageVersion: .*', "PackageVersion: $env:VERSION" `
-            -replace 'ReleaseNotes: .*', "ReleaseNotes: |-`n  See release notes at: https://github.com/vanthaita/orca-releases/releases/tag/${{ github.ref_name }}" `
-            -replace 'ReleaseNotesUrl: .*', "ReleaseNotesUrl: https://github.com/vanthaita/orca-releases/releases/tag/${{ github.ref_name }}" |
+            -replace 'ReleaseNotes: .*', "ReleaseNotes: |-`n  See release notes at: https://github.com/vanthaita/Orca-CLI/releases/tag/${{ github.ref_name }}" `
+            -replace 'ReleaseNotesUrl: .*', "ReleaseNotesUrl: https://github.com/vanthaita/Orca-CLI/releases/tag/${{ github.ref_name }}" |
             Set-Content winget/vanthaita.Orca.locale.en-US.yaml
 
       - name: Create PR to winget-pkgs
