--- a/cli/package.json
+++ b/cli/package.json
@@ -1,6 +1,6 @@
 {
     "name": "orcacli",
-    "version": "0.1.29",
+    "version": "0.1.30",
     "description": "AI-powered Git workflow CLI for modern developers. Intelligent commits, workflow orchestration, and zero-friction releases.",
     "preferGlobal": true,
     "scripts": {
@@ -29,7 +29,7 @@
         "rust"
     ],
     "author": "vanthaita",
-    "license": "MIT",
+    "license": "Apache-2.0",
     "repository": {
         "type": "git",
         "url": "https://github.com/vanthaita/Orca-CLI.git"
